# trustgraph-templates

./: .gitignore  Containerfile  Makefile  README.md  TEST_STRATEGY.md  pyproject.toml  setup.py  test-dialog-flow.py
.github/workflows/: deploy-prod.yaml  pull-request.yaml
docs/tech-specs/: helm-charts.md  tests.md
pulumi/: Pulumi.prod.yaml  index.ts  package-lock.json  package.json
scripts/: tg-config-svc  tg-configurations-list  tg-configurator
tests/: README.md  conftest.py
tests/configs/: cloud-aws.json  complex-rag.json  minimal.json  multi-service.json
tests/features/: conftest.py  helpers.py  test_aca_scaling.py  test_cli_smoke.py  test_components.py  test_launch_shape.py  test_overrides.py
tests/integration/: test_cli.py  test_compilation.py  test_errors.py
tests/schemas/: kubernetes-resource.schema.json  trustgraph-config.schema.json
tests/scripts/: test-all-platforms.sh  test-template-compilation.sh  validate-docker-compose.sh  validate-kubernetes.sh
tests/unit/: test_api.py  test_generator.py  test_run.py
tests/validation/: test_schema.py  test_semantics_docker.py  test_semantics_k8s.py  test_semantics_tg.py  test_syntax.py
tests/validators/: kubernetes.py  trustgraph.py
tiber/: config-gaudi2-vllm.json
trustgraph_configurator/: __init__.py  __main__.py  api.py  generator.py  index.py  list.py  packager.py  run.py  service.py
trustgraph_configurator/resources/dialog/: trustgraph-docs.yaml  trustgraph-flow.yaml  trustgraph-output.jsonata
trustgraph_configurator/templates/: index.json
trustgraph_configurator/templates/1.0/: components.jsonnet
trustgraph_configurator/templates/1.1/: components.jsonnet  config-to-noop.jsonnet  config-to-tg-configuration.jsonnet  trustgraph-config.jsonnet
trustgraph_configurator/templates/1.2/: trustgraph-config.jsonnet
trustgraph_configurator/templates/1.3/: components.jsonnet  config-to-tg-configuration.jsonnet  trustgraph-config.jsonnet
trustgraph_configurator/templates/1.4/: components.jsonnet  trustgraph-config.jsonnet
trustgraph_configurator/templates/1.5/: components.jsonnet
trustgraph_configurator/templates/1.7/: components.jsonnet  trustgraph-config.jsonnet
trustgraph_configurator/templates/1.8/: components.jsonnet  config-to-additionals.jsonnet  trustgraph-config.jsonnet
trustgraph_configurator/templates/1.9/: components.jsonnet
trustgraph_configurator/templates/2.0/: components.jsonnet
(+568 files in other folders)
